@@ -1,3 +1,7 @@
+	* Make it possible to use --enable-timeout-stat as well as
+	  --enable-timeout-stat=static for a static background process which
+	  does the final stat system calls
+	* Do not mix HAVE_TIMEOUT_STAT with WITH_TIMEOUT_STAT
 	* Add timeout.c/timeout.h for static background process which is able
 	  to read the file name from pipe, does the stat(2) system call, and
 	  writes the result back to a pipe.
